about me updated

--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
       </div>
     </div>
     <div id="about">
+      <h2 class="about-me-txt">About Me</h2>
       <div class="about-box">
         <img src="./images/profile_pic.jpg" alt="farooque'sImage" />
         <div>
-          <h2>About Me</h2>
+          <h2><span class="hi"> I'm </span> MD Farooque Ansari...</h2>
           <p>
-            Passion-driven learner and a web developer with the ability to write
+            A Passion-driven learner and a web developer with the ability to write
             clean, reusable, optimised code. Skilled and experienced at building
             and maintaining web applications. Looking forward to joining a
             progressive and challenging work environment.
@@ -95,6 +96,7 @@
           <div><div><i class="fa-brands fa-java"></i>JAVA</div></div>
           <div><div><i class="fa-solid fa-database"></i>MySQL</div></div>
           <div><div><i class="fa-brands fa-aws"></i>AWS</div></div>
+          
         </div>
       </div>
     </div>
